Down to 2s for C60 (100x factor remaining to C version)

--- a/buckygen-revival.cabal
+++ b/buckygen-revival.cabal
@@ -21,12 +21,13 @@ library
     Expansion
     Canonical
     Spiral
+    MutGraph
 
 executable buckygen-test
   import:         shared
   hs-source-dirs: src
   main-is:        TestCanonical.hs
-  other-modules:  Seeds, Expansion, Canonical, Spiral
+  other-modules:  Seeds, Expansion, Canonical, Spiral, MutGraph
   ghc-options:    -O2 -rtsopts
 
 executable buckygen-generate
